--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title:
-email:
-description: > # this means to ignore newlines until "baseurl:"
+title: "Electric Meerkat"
+email: "mikipux7@gmail.com"
+description: "Electric Meerkat is a software and game development firm in St.Louis." 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
+twitter_username: "ElectricMeerkat"
+github_username: ElectricMeerkat
 
 # Build settings
 markdown: kramdown
